--- a/twitter/package.json
+++ b/twitter/package.json
@@ -6,10 +6,13 @@
   "repository": "https://github.com/jasperf/vue-projects",
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.6.0"
+    "babel-preset-env": "^1.6.0",
+    "node-sass": "^4.5.3",
+    "nodemon": "^1.11.0"
   },
   "scripts": {
-    "build": "babel src -d dist"
+    "build": "babel src -d dist && node-sass --include-path scss scss/twitter.scss dist/twitter.css"
   },
-  "author": "Jasper Frumau"
+  "author": "Jasper Frumau",
+  "dependencies": {}
 }
