--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -14,6 +14,7 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "sweetalert": "^2.0.3",
     "vue": "^2.4.2"
   },
   "devDependencies": {
