--- a/vue-shop/package.json
+++ b/vue-shop/package.json
@@ -11,6 +11,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "ajv": "^5.0.0",
+    "express": "^4.16.3",
     "mongoose": "^5.2.18",
     "vee-validate": "^2.0.9",
     "vue": "^2.5.17",
@@ -55,7 +57,7 @@
     "vue-loader": "^13.7.3",
     "vue-style-loader": "^3.1.2",
     "vue-template-compiler": "^2.5.17",
-    "webpack": "^3.12.0",
+    "webpack": "^4.0.0",
     "webpack-bundle-analyzer": "^2.13.1",
     "webpack-dev-server": "^2.11.3",
     "webpack-merge": "^4.1.4"
