--- a/vue-shop/backend/package.json
+++ b/vue-shop/backend/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "express-api",
+  "name": "backend",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.18.2",
-    "bson": "^1.0.5",
+    "body-parser": "^1.18.3",
+    "bson": "^1.1.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
-    "ejs": "~2.5.7",
+    "ejs": "^2.5.9",
     "express": "^4.16.3",
-    "mongoose": "^5.0.0-rc1",
-    "morgan": "~1.9.0",
+    "mongoose": "^5.2.18",
+    "morgan": "^1.9.1",
     "serve-favicon": "~2.4.5"
   }
 }
