--- a/vue-shop/backend/package.json
+++ b/vue-shop/backend/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.6.9",
     "ejs": "^2.5.9",
     "express": "^4.16.3",
+    "faker": "^4.1.0",
     "mongoose": "^5.2.18",
     "morgan": "^1.9.1",
     "serve-favicon": "~2.4.5"
