--- a/axios/package.json
+++ b/axios/package.json
@@ -17,5 +17,8 @@
         "laravel-mix": "^1.0",
         "lodash": "^4.17.19",
         "vue": "^2.6.11"
+    },
+    "dependencies": {
+        "vue-template-compiler": "^2.6.11"
     }
 }
